[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-rt = "2.9.0"
serde = { version = "1.0.201", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
#openssl = {version = "0.10.64",features = ["vendored"]}
sqlx = { version = "0.7.4",   features  = [
        "mysql",
        "runtime-tokio-rustls",
        "macros",
        "chrono",
]}

[[bin]]
name = "teacher-service"
